Wed Dec  3 08:09:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/IIOP_Connector.cpp:
          Layout changes

        * tao/IORInterceptor/IORInterceptor_Adapter_Impl.cpp:
          Const changes

        * tao/TAO_Singleton.h:
        * tao/TAO_Singleton_Manager.h:
          Doxygen changes

        * tao/TAO_Singleton_Manager.cpp (fini):
          When we have been registered with the ACE object manager
          then unregister ourselves again. If we keep registered
          and the TAO DLL gets unloaded ACE will crash when trying
          to callback to us

Wed Dec  3 06:55:00 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Portable_Interceptors/AdvSlot/run_test.pl:
        * tests/Portable_Interceptors/AdvSlot/server.cpp:
          Added support to specify IOR file through the commandline

Tue Dec 02 19:48:32 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/IFR_Self_Recursive_IDL.mpc:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Recursive_IDL_Test/IFR_Self_Reursive_IDL.mpc:
        Corrected the name of the folder.

Tue Dec 02 19:11:54 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/client.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/server.cpp:
          Changed global char* variable to ACE_TCHAR*.

Tue Dec 02 19:02:35 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/client.cpp:
        * orbsvcs/tests/InterfaceRepo/IFR_Self_Reursive_IDL_Test/server.cpp:
          Changed older main to ACE_TMAIN.

Mon Dec 01 19:47:02 UTC 2008  Trevor Fields  <fields_t@ociweb.com>

        * tao/AnyTypeCode/TypeCode_CDR_Extraction.cpp: